--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,10 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'  # Adjust to match your project requirements
+          python-version: '3.12'  
 
+      - name: Set execute permission for formatchecker.py
+        run: chmod +x unit_test/formatchecker.py
+        
       - name: Run Unit Tests
         run:  unit_test/formatchecker.py
