--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,6 @@ jobs:
 
       - name: Set execute permission for formatchecker.py
         run: chmod +x unit_test/formatchecker.py
-        
+
       - name: Run Unit Tests
-        run:  unit_test/formatchecker.py
+        run:  python3 unit_test/formatchecker.py
