--- a/.github/workflows/SnowflakeSnowparkPipeline.yml
+++ b/.github/workflows/SnowflakeSnowparkPipeline.yml
@@ -26,6 +26,7 @@ jobs:
           SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
           SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
           SNOWFLAKE_STAGE: ${{ secrets.SNOWFLAKE_STAGE }}
+          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA}}
           
         run: |
           python .github/workflows/upload_data.py
