--- a/.github/workflows/SnowflakeSnowparkPipeline.yml
+++ b/.github/workflows/SnowflakeSnowparkPipeline.yml
@@ -14,9 +14,19 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+        with:
+          lfs: true
 
       - name: Install Snowflake CLI
         run: pip install snowflake-connector-python snowflake-snowpark-python
+
+      - name: install git lfs
+        run: git lfs install
+
+
+      - name: Pull Git LFS files
+        run: |
+          git lfs pull  # Pulls the actual files stored with LFS
 
       - name: Upload Data to Snowflake Stage
         env:
