--- a/.github/workflows/SnowflakePipelineProd.yml
+++ b/.github/workflows/SnowflakePipelineProd.yml
@@ -32,7 +32,7 @@ jobs:
 
   deploy-to-snowflake:
     runs-on: ubuntu-latest
-    needs: format_check  
+    needs: format-check  
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
