--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,3 +7,6 @@ transformers
 huggingface_hub
 sse_starlette                                                                                                                                                                    
 langchain_huggingface
+pytest
+pytest-asyncio
+httpx
