--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,12 +1,15 @@
 langchain
 langchain-community
 langserve
-fastapi
-uvicorn
+fastapi==0.109.2
+uvicorn==0.27.1
 transformers
 huggingface_hub
 sse_starlette                                                                                                                                                                    
-langchain_huggingface
-pytest
-pytest-asyncio
-httpx
+langchain_huggingface==0.0.1
+pytest==8.0.0
+pytest-asyncio==0.23.5
+httpx==0.26.0
+python-dotenv==1.0.1
+requests==2.31.0
+python-multipart==0.0.9
