--- a/.github/workflows/FirebaseDeploy.yml
+++ b/.github/workflows/FirebaseDeploy.yml
@@ -21,15 +21,32 @@ jobs:
       with:
         python-version: '3.12'
     
-    - name: Install dependencies
+    - name: Install app dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r app/requirements.txt
     
+    - name: Install script dependencies
+      run: |
+        pip install -r .github/scripts/requirements.txt
+    
+    - name: Start Hugging Face Endpoint
+      env:
+        HUGGINGFACE_API_TOKEN: ${{ secrets.HUGGINGFACE_API_TOKEN }}
+      run: |
+        python .github/scripts/manage_endpoint.py start
+    
     - name: Run tests
       run: |
         cd app
-        pytest test_main.py -v
+        pytest .github/scripts/test_main.py -v
+    
+    - name: Stop Hugging Face Endpoint
+      if: always()  # Run even if tests fail
+      env:
+        HUGGINGFACE_API_TOKEN: ${{ secrets.HUGGINGFACE_API_TOKEN }}
+      run: |
+        python .github/scripts/manage_endpoint.py stop
 
   deploy:
     needs: test
@@ -38,15 +55,22 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        token_format: "access_token"
+        create_credentials_file: true
+
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        export_default_credentials: true
 
     - name: Configure Docker for GCR
-      run: gcloud auth configure-docker
+      run: |
+        gcloud auth configure-docker --quiet
+        gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://gcr.io
 
     - name: Build and push container
       run: |
