--- a/.github/workflows/FirebaseDeploy.yml
+++ b/.github/workflows/FirebaseDeploy.yml
@@ -24,7 +24,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        if [ -f "app/requirements.txt" ]; then
+          pip install -r app/requirements.txt
+        fi
         pip install requests openai
     
     - name: Run tests
