--- a/.github/workflows/FirebaseDeploy.yml
+++ b/.github/workflows/FirebaseDeploy.yml
@@ -19,17 +19,22 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.12'
+        python-version: '3.11'
     
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r app/requirements.txt
+        if [ -f "app/requirements.txt" ]; then
+          pip install -r app/requirements.txt
+        fi
+        pip install requests openai
     
     - name: Run tests
+      env:
+        HUGGINGFACE_API_KEY: ${{ secrets.HUGGINGFACE_API_KEY }}
       run: |
         cd app
-        pytest test_main.py -v
+        python test_server.py
 
   deploy:
     needs: test
@@ -38,15 +43,23 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        project_id: ${{ secrets.GCP_PROJECT_ID }}
+        create_credentials_file: true
+
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        export_default_credentials: true
+        install_components: 'gke-gcloud-auth-plugin'
 
     - name: Configure Docker for GCR
-      run: gcloud auth configure-docker
+      run: |
+        gcloud auth configure-docker --quiet
+        gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://gcr.io
 
     - name: Build and push container
       run: |
